remove search in getSellerOrder
